RESOLVED FIXED109565
JSC asserting with long parameter list functions in debug mode ARM traditional
https://bugs.webkit.org/show_bug.cgi?id=109565
Summary JSC asserting with long parameter list functions in debug mode ARM traditional
Gabor Rapcsanyi
Reported 2013-02-12 04:45:19 PST
JSC asserting with long parameter list functions in debug mode ARM traditional. ASSERTION FAILED: differenceBetween(m_uninterruptedInstructionSequenceBegin, label()) <= insnSpace /home/rgabor/WebKit/Source/JavaScriptCore/jit/JITInlines.h(167) : void JSC::JIT::endUninterruptedSequence(int, int, int) Affected test are: ecma/FunctionObjects/15.3.1.1-3.js ecma/FunctionObjects/15.3.2.1-3.js ecma/FunctionObjects/15.3.5-1.js
Attachments
proposed fix (1.35 KB, patch)
2013-02-12 04:56 PST, Gabor Rapcsanyi
no flags
Gabor Rapcsanyi
Comment 1 2013-02-12 04:56:18 PST
Created attachment 187835 [details] proposed fix
Zoltan Herczeg
Comment 2 2013-02-12 06:27:12 PST
Comment on attachment 187835 [details] proposed fix r=me. Thanks for the fix.
WebKit Review Bot
Comment 3 2013-02-12 06:42:18 PST
Comment on attachment 187835 [details] proposed fix Clearing flags on attachment: 187835 Committed r142616: <http://trac.webkit.org/changeset/142616>
WebKit Review Bot
Comment 4 2013-02-12 06:42:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.